OLV-17578 formbuilder: edit mode head jumping fix

--- a/src/sass/_forms.sass
+++ b/src/sass/_forms.sass
@@ -448,7 +448,7 @@
 		align-items: center
 		min-height: 55px
 		// justify-content: space-between
-		padding: 16px 60px 16px 40px
+		padding: 8px 60px 8px 40px
 		border-bottom: 1px solid #d8d8d8
 		&--column
 			flex-direction: column
@@ -465,6 +465,8 @@
 		.form__btn-close
 			&:before, &:after
 				top: 10px
+		.form__hint
+			margin-top: 3px
 	&__head-list li
 		position: relative
 		padding-left: 8px
